[package]
name = "pi_db"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2018"

[dependencies]
parking_lot = "0.11"
futures = "0.3"
async-stream = "0.3"
bytes = "1.0"
dashmap = "4.0"
log = "0.4"
atom = { path = "../pi_lib/atom" }
guid = { path = "../pi_lib/guid" }
async = { path = "../pi_lib/async" }
async_file = { path = "../pi_lib/async_file" }
async_transaction = { path = "../pi_lib/async_transaction" }
pi_store = { path = "../pi_store" }
ordmap = { path = "../pi_lib/ordmap" }
hash = { path = "../pi_lib/hash" }
sinfo = { path = "../pi_lib/sinfo" }

[dev-dependencies]
crossbeam-channel = "0.5"
env_logger = "0.9"
time = { path = "../pi_lib/time" }