[package]
name = "pi_db"
version = "0.2.5"
authors = ["vmos <vmosone007@gmail.com>"]
edition = "2018"
description = "Full cache based database，support transaction"
repository = "https://github.com/GaiaWorld/pi_db.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "database", "transaction"]

[features]
default = []
trace = ["opentelemetry", "tracing-opentelemetry", "tracing", "tracing-subscriber"]

[dependencies]
parking_lot = "0.12"
futures = "0.3"
crossbeam-channel = "0.5"
async-lock = "2.7"
async-stream = "0.3"
bytes = "1.4"
dashmap = "5.5"
log = "0.4"
pi-async-rt = "0.1"
pi_async_file = "0.5"
pi_async_transaction = "0.2"
pi_store = "0.2"
pi_atom = "0.2"
pi_guid = "0.1"
pi_bon = "0.2"
pi_sinfo = "0.2"
pi_ordmap = "0.2"
pi_logger = "0.2"
pi_hash = "0.1"
opentelemetry = { version = "0.18", optional = true }
tracing-opentelemetry = { version = "0.18", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
lazy_static = "1.4"

[dev-dependencies]
crossbeam-channel = "0.5"
env_logger = "0.9"
fastrand = "1.5"
pi_time = "0.3"